# standout-project

./: .env.example  .gitignore  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_25_873715556cfa_initial_schema.py  2026_02_25_add_condition_reports.py  2026_02_25_add_reservations_table.py  2026_02_25_add_staff_members.py  2026_02_25_redesign_staff_housekeeping.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/domain/: __init__.py  exceptions.py
backend/app/domain/entities/: __init__.py  event.py  housekeeping.py  incident.py  item.py  laundry.py  message.py  property.py  reservation.py  staff.py
backend/app/domain/interfaces/: __init__.py  channel_adapter.py  event_store.py  incident_repository.py  inventory_repository.py  laundry_repository.py  llm_client.py  property_repository.py  raw_message_repository.py  repositories.py
backend/app/domain/value_objects/: __init__.py  confidence.py  entity_ref.py  media.py
backend/app/infrastructure/cache/: __init__.py  idempotency.py
backend/app/infrastructure/channels/: __init__.py  telegram_adapter.py
backend/app/infrastructure/db/: __init__.py  session.py
backend/app/infrastructure/llm/: __init__.py  openai_client.py  (+3 more)
backend/app/services/: __init__.py  clarification_service.py  condition_report_service.py  entity_resolver.py  event_engine.py  incident_service.py  ingest_service.py  interpretation_service.py  inventory_projection.py  retry_worker.py
backend/scripts/: run_dev.py  seed.py
(+119 files in other folders)
