[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "standout-backend"
version = "0.1.0"
description = "StandOut - Operational Event Orchestrator backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100,<1",
    "uvicorn[standard]>=0.24,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.28,<1",
    "alembic>=1.12,<2",
    "pydantic-settings>=2.0,<3",
    "openai>=1.0,<2",
    "httpx>=0.25,<1",
    "tenacity>=8.0,<10",
    "thefuzz>=0.20,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]
